--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </section>
     <section>
       <div class="filter-options">
+        <div class="row">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
@@ -30,6 +31,7 @@
         <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
+      </div>
       </div>
       <ul id="restaurants-list"></ul>
     </section>
